--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,9 @@ body {
 .heading_container h2 {
   text-align: center;
   margin: 70px auto 15px auto;
-  text-transform: uppercase;
-  font-weight: bold;
+  color: var(--purple-600);
+  /* text-transform: uppercase; */
+  font-weight: 500;
 }
 
 .section-brand {
@@ -214,9 +215,9 @@ a:focus {
 }
 
 .slider_section .detail-box p {
-  color: #195a38;
   font-size: 18px;
   margin-top: 25px;
+  line-height: 1.6;
 }
 
 /* .detail-box p {
@@ -385,11 +386,6 @@ a:focus {
   max-width: 1020px;
 }
 
-
-
-
-
-
 .about_section .row {
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -526,6 +522,7 @@ a:focus {
 .about-content h2 {
   font-size: 32px;
   margin-bottom: 20px;
+  color: var(--purple-600);
 }
 
 .about-content p {
@@ -943,7 +940,7 @@ a:focus {
 }
 
 .info_section {
-  color: var(--purple-700);
+  /* color: var(--purple-700); */
   font-weight: 500;
   font-family: "Lato", sans-serif;
 }
@@ -952,6 +949,10 @@ a:focus {
   margin: 20px 0 25px 0;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+.info_section p {
+  color: #353935;
 }
 
 .info_section .form_heading {
@@ -999,7 +1000,7 @@ a:focus {
   outline: none;
   border: none;
   border-radius: 30px;
-  color: #050505;
+  color: #353935;
   text-transform: uppercase;
   background-color: #ffff00;
   -webkit-transform: translate(-102%);
@@ -1141,7 +1142,7 @@ a:focus {
 .footer-links ul li a {
   /* color: #ffffff; */
   background-color: white;
-  color: var(--purple-700);
+  color: #353935;
 
   /* font-size: 14px; */
   text-decoration: none;
@@ -1149,7 +1150,7 @@ a:focus {
 }
 
 .footer-links ul li a:hover {
-  color: var(--purple-900);
+  color: var(--purple-500);
   text-decoration: underline;
 }
 
@@ -1240,7 +1241,7 @@ a:focus {
   }
 
   .slider_section.no-overlay::before {
-    background: rgba(255, 255, 255, 0.15);
+    background: rgba(255, 255, 255, 0.02);
     backdrop-filter: blur(9px);
   }
 
@@ -1258,10 +1259,6 @@ a:focus {
     font-size: 22px;
   }
 
-  .slider_section .detail-box p {
-    font-size: 16px;
-    line-height: 1.6;
-  }
 }
 
 /* =========================
@@ -2075,12 +2072,6 @@ a:focus {
     font-weight: 500;
   }
 
-  .slider_section .detail-box p {
-    color: #eefff7;
-    font-size: 18px;
-    margin-top: 25px;
-  }
-
   .slider_section ol.carousel-indicators li {
     width: 20px;
     height: 20px;
@@ -2184,7 +2175,7 @@ body {
 }
 
 .slider_section .detail-box p {
-  color: var(--purple-800);
+  color: #353935;
 }
 
 .slider_section .detail-box .btn-box .btn-1 {
