--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,10 +5,14 @@
 @media (max-width: 768px) {
   .hero_area {
     height: auto;
+    min-height: auto;
+    padding-bottom: 20px;
   }
 
   .slider_section {
-    padding: 50px 0 125px 0;
+    padding: 56px 18px 40px 18px;
+    min-height: auto;
+    margin-top: 12px;
   }
 
   .info_section .info_form form {
@@ -31,6 +35,25 @@
 @media (max-width: 576px) {
   .slider_section .detail-box {
     text-align: center;
+    padding-left: 0;
+  }
+
+  .slider_section {
+    margin-top: 16px;
+  }
+
+  .slider_section .detail-box .btn-box {
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+  .slider_section .detail-box .btn-box .btn-1,
+  .slider_section .detail-box .btn-box .btn-2 {
+    width: 100%;
+    max-width: 300px;
+    margin-right: 0;
+    min-width: 0;
+    flex: 1 1 100%;
   }
 
   .slider_section .detail-box h1 {
@@ -55,10 +78,31 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .slider_section {
+    min-height: 520px;
+  }
+
+  .slider_section .detail-box {
+    padding-left: 12px;
+  }
+
+  .slider_section .detail-box .btn-box {
+    max-width: 320px;
+  }
+
+  .slider_section .detail-box .btn-box .btn-1,
+  .slider_section .detail-box .btn-box .btn-2 {
+    max-width: 100%;
+    min-width: 0;
+    flex: 1 1 100%;
+  }
+}
+
 @media (max-width: 480px) {
   .slider_section .detail-box .btn-box .btn-1 {
     margin: 0;
-    margin-bottom: 15px;
+    margin-bottom: 0;
   }
 }
 
