index pgae - new image added as first slider

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,7 +78,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1200px) and (min-width: 769px) {
   .slider_section {
     min-height: 520px;
   }
